[gd_scene load_steps=2 format=3 uid="uid://b852q02qlfpcq"]

[ext_resource type="Script" uid="uid://ds50ei2bqpnnw" path="res://scripts/ui/character_select.gd" id="1_jn04r"]

[node name="CharacterSelect" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_jn04r")

[node name="panel_p1" type="Panel" parent="."]
layout_mode = 0
offset_left = 92.0
offset_top = 129.0
offset_right = 382.0
offset_bottom = 467.0

[node name="VistaPrevia" type="TextureRect" parent="panel_p1"]
layout_mode = 0
offset_left = 46.0
offset_top = 44.0
offset_right = 228.0
offset_bottom = 264.0

[node name="anterior_p1" type="Button" parent="panel_p1"]
layout_mode = 0
offset_left = 15.0
offset_top = 298.0
offset_right = 80.0
offset_bottom = 318.0
text = "<"

[node name="siguiente_p1" type="Button" parent="panel_p1"]
layout_mode = 0
offset_left = 181.0
offset_top = 298.0
offset_right = 245.0
offset_bottom = 319.0
text = ">"

[node name="panel_p2" type="Panel" parent="."]
layout_mode = 0
offset_left = 765.0
offset_top = 126.0
offset_right = 1045.0
offset_bottom = 466.0

[node name="VistaPrevia" type="TextureRect" parent="panel_p2"]
layout_mode = 0
offset_left = 56.0
offset_top = 43.0
offset_right = 230.0
offset_bottom = 253.0

[node name="anterior_p2" type="Button" parent="panel_p2"]
layout_mode = 0
offset_left = 24.0
offset_top = 293.0
offset_right = 93.0
offset_bottom = 312.0
text = "<"

[node name="siguiente_p2" type="Button" parent="panel_p2"]
layout_mode = 0
offset_left = 204.0
offset_top = 291.0
offset_right = 261.0
offset_bottom = 310.0
text = ">"

[node name="partida" type="Button" parent="."]
layout_mode = 0
offset_left = 497.0
offset_top = 564.0
offset_right = 651.0
offset_bottom = 607.0
text = "PARTIDA"

[node name="ContenedorReglas" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 515.0
offset_top = 267.0
offset_right = 743.0
offset_bottom = 383.0

[node name="FilaVidas" type="HBoxContainer" parent="ContenedorReglas"]
layout_mode = 2

[node name="Titulo" type="Label" parent="ContenedorReglas/FilaVidas"]
layout_mode = 2
text = "VIDAS"

[node name="BtnVidaMenos" type="Button" parent="ContenedorReglas/FilaVidas"]
layout_mode = 2
text = "-"

[node name="LabelVida" type="Label" parent="ContenedorReglas/FilaVidas"]
layout_mode = 2
text = "1"

[node name="BtnVidaMas" type="Button" parent="ContenedorReglas/FilaVidas"]
layout_mode = 2
text = "+"

[node name="FilaPuntos" type="HBoxContainer" parent="ContenedorReglas"]
layout_mode = 2

[node name="Titulo" type="Label" parent="ContenedorReglas/FilaPuntos"]
layout_mode = 2
text = "PUNTOS"

[node name="BtnPuntosMenos" type="Button" parent="ContenedorReglas/FilaPuntos"]
layout_mode = 2
text = "-"

[node name="LabelPuntos" type="Label" parent="ContenedorReglas/FilaPuntos"]
layout_mode = 2
text = "10"

[node name="BtnPuntosMas" type="Button" parent="ContenedorReglas/FilaPuntos"]
layout_mode = 2
text = "+"

[connection signal="pressed" from="panel_p1/anterior_p1" to="." method="_on_anterior_p1_pressed"]
[connection signal="pressed" from="panel_p1/siguiente_p1" to="." method="_on_siguiente_p1_pressed"]
[connection signal="pressed" from="panel_p2/anterior_p2" to="." method="_on_anterior_p2_pressed"]
[connection signal="pressed" from="panel_p2/siguiente_p2" to="." method="_on_siguiente_p2_pressed"]
[connection signal="pressed" from="partida" to="." method="_on_partida_pressed"]
[connection signal="pressed" from="ContenedorReglas/FilaVidas/BtnVidaMenos" to="." method="_on_btn_vida_menos_pressed"]
[connection signal="pressed" from="ContenedorReglas/FilaVidas/BtnVidaMas" to="." method="_on_btn_vida_mas_pressed"]
[connection signal="pressed" from="ContenedorReglas/FilaPuntos/BtnPuntosMenos" to="." method="_on_btn_puntos_menos_pressed"]
[connection signal="pressed" from="ContenedorReglas/FilaPuntos/BtnPuntosMas" to="." method="_on_btn_puntos_mas_pressed"]
